--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello! denver boulder</p>
+        <p>Hello! denver boulder you rock!</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
