--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   </head>
   <body>
-
+    <h1>Welcome 2015!</h1>
     <div ui-view></div>
 
     <script src="bower_components/angular/angular.js"></script>
